@@ -6,7 +6,10 @@ import lombok.*;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.security.crypto.password.PasswordEncoder;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 
@@ -17,7 +20,7 @@ import java.util.List;
 @Data
 @NoArgsConstructor(access = AccessLevel.PROTECTED)
 @ToString
-public class User implements UserDetails {
+public class User  {
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private int idx;
@@ -39,51 +42,28 @@ public class User implements UserDetails {
 
     @Column(name = "phone_number", nullable = false)
     private String phoneNumber;
+    @Column(nullable = false)
+    private String role;
 
     @Builder
-    public User(String userId, String password, String nickname, String email, String category, String phoneNumber) {
+    public User(Integer idx, String userId, String password, String nickname, String email, String category, String phoneNumber, String role) {
+        this.idx = idx;
         this.userId = userId;
         this.password = password;
         this.nickname = nickname;
         this.email = email;
         this.category = category;
         this.phoneNumber = phoneNumber;
+        this.role = role;
     }
 
-    @Override
-    public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority("user"));
+    public List<String> getRoleList() {
+        if (this.role.length() > 0) {
+            return Arrays.asList(this.role.split(","));
+        }
+        return new ArrayList<>();
     }
-
-    @Override
-    public String getUsername() {
-        return userId;
+    public static User createUser(String userId, String password, PasswordEncoder passwordEncoder, String nickname, String email, String category, String phoneNumber, String role) {
+        return new User(null, userId, passwordEncoder.encode(password), nickname, email, category, phoneNumber, role);
     }
-
-    @Override
-    public String getPassword() {
-        return password;
-    }
-
-    @Override
-    public boolean isAccountNonExpired() {
-        return true;
-    }
-
-    @Override
-    public boolean isAccountNonLocked() {
-        return true;
-    }
-
-    @Override
-    public boolean isCredentialsNonExpired() {
-        return true;
-    }
-
-    @Override
-    public boolean isEnabled() {
-        return true;
-    }
-
-
 }
